welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:34: error: value downto is not a member of Int
	for(c <- 2 downto 0){
                   ^